Fix Alignment Section 3

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ h2{
 }
 .row {
   width: 700px;
-  margin: 50px 60px;
+  margin: 50px 146px;
   display: block;
   Padding: 25px 50px;
   background: #3882F6;
